添加了drawerLayout和NavigationView的显示

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,8 @@
     <string name="no_internet">Your device don\'t connects to Internet </string>
     <string name="server_error">Can\'t connect to the server</string>
 
+    <!--drawer-->
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+
 </resources>
